test/tests/stages/14_pointers/invalid_types/negate_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  -
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
